[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_ST"
version = "0.0.1"
authors = [
    { name="Simon Traub", email="s.traub@sensopart.de"}
]
description = "A small example package"
readme= "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3", 
    "Operating System :: OS Independent", 
    "Licence :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"